--- a/GitSubmodules/Mvvm/View/MainView.xaml
+++ b/GitSubmodules/Mvvm/View/MainView.xaml
@@ -23,7 +23,15 @@
             <TextBlock Text="{Binding Model.GitVersion}" />
 
             <TextBlock FontWeight="Bold" Text="Solution path" />
-            <TextBlock Text="{Binding Model.CurrentSolutionPath}" TextWrapping="Wrap" />
+
+            <TextBlock>
+                <Hyperlink NavigateUri="http://nothing.not/" RequestNavigate="SubmoduleOpenFolder">
+
+                    <TextBlock Foreground="Black"
+                               Text="{Binding Model.CurrentSolutionPath}"
+                               TextWrapping="Wrap" />
+                </Hyperlink>
+            </TextBlock>
 
         </StackPanel>
 
@@ -166,11 +174,21 @@
 
                                 <TextBlock Grid.Row="1"
                                            Grid.Column="1"
-                                           VerticalAlignment="Center"
-                                           FontWeight="Bold"
-                                           Text="{Binding Name,
-                                                          Mode=OneWay}"
-                                           TextTrimming="CharacterEllipsis" />
+                                           VerticalAlignment="Center">
+
+                                    <Hyperlink NavigateUri="http://nothing.not/"
+                                               RequestNavigate="SubmoduleOpenFolder"
+                                               Tag="{Binding}">
+
+                                        <TextBlock FontWeight="Bold"
+                                                   Foreground="Black"
+                                                   Text="{Binding Name,
+                                                                  Mode=OneWay}"
+                                                   TextTrimming="CharacterEllipsis" />
+
+                                    </Hyperlink>
+
+                                </TextBlock>
 
                                 <Button Grid.Row="1"
                                         Grid.Column="3"
