--- a/GitSubmodules/Mvvm/View/MainView.xaml
+++ b/GitSubmodules/Mvvm/View/MainView.xaml
@@ -18,7 +18,6 @@
         </Grid.RowDefinitions>
 
         <StackPanel Grid.Row="1" Margin="5">
-
             <TextBlock FontWeight="Bold" Text="Git Version" />
             <TextBlock Text="{Binding Model.GitVersion}" />
 
@@ -172,23 +171,28 @@
                                     </ContextMenu>
                                 </Grid.ContextMenu>
 
-                                <TextBlock Grid.Row="1"
-                                           Grid.Column="1"
-                                           VerticalAlignment="Center">
+                                <StackPanel Grid.Row="1"
+                                            Grid.Column="1"
+                                            VerticalAlignment="Center"
+                                            Orientation="Horizontal">
 
-                                    <Hyperlink NavigateUri="http://nothing.not/"
-                                               RequestNavigate="SubmoduleOpenFolder"
-                                               Tag="{Binding}">
+                                    <Image Source="{Binding HealthImage}" />
 
-                                        <TextBlock FontWeight="Bold"
-                                                   Foreground="Black"
-                                                   Text="{Binding Name,
-                                                                  Mode=OneWay}"
-                                                   TextTrimming="CharacterEllipsis" />
+                                    <TextBlock Margin="5,0,0,0">
+                                        <Hyperlink NavigateUri="http://nothing.not/"
+                                                   RequestNavigate="SubmoduleOpenFolder"
+                                                   Tag="{Binding}">
 
-                                    </Hyperlink>
+                                            <TextBlock FontWeight="Bold"
+                                                       Foreground="Black"
+                                                       Text="{Binding Name,
+                                                                      Mode=OneWay}"
+                                                       TextTrimming="CharacterEllipsis" />
 
-                                </TextBlock>
+                                        </Hyperlink>
+                                    </TextBlock>
+
+                                </StackPanel>
 
                                 <Button Grid.Row="1"
                                         Grid.Column="3"
