Rename CommitId to CompleteTag to avoid confusion

--- a/GitSubmodules/Mvvm/View/MainView.xaml
+++ b/GitSubmodules/Mvvm/View/MainView.xaml
@@ -269,7 +269,7 @@
                                          Background="Transparent"
                                          BorderThickness="0"
                                          IsReadOnly="True"
-                                         Text="{Binding CommitId,
+                                         Text="{Binding CompleteTag,
                                                         Mode=OneWay}" />
 
                                 <StackPanel Grid.Row="5"
